--- a/app/html/main.html
+++ b/app/html/main.html
@@ -37,7 +37,7 @@
                 <bubble-settings>
                     <span>Music</span>
                     <point></point>
-                    <span>Battery</span>
+                    <span>Device Care</span>
                     <point></point>
                     <span>Weather</span>
                 </bubble-settings>
@@ -48,11 +48,11 @@
             <img src="../res/icons/galaxy-finder.ico" class="bubble-icon">
             <bubble-text>
                 <span>Galaxy Finder</span>
-                <bubble-settings>
+                <bubble-settin gs>
                     <span>Autostart</span>
                     <point></point>
                     <span>Shortcut</span>
-                </bubble-settings>
+                </bubble-settin>
             </bubble-text>
         </bubble-nav> -->
     </navbar>
