--- a/app/settings/galaxy-widgets/main.html
+++ b/app/settings/galaxy-widgets/main.html
@@ -69,15 +69,6 @@
                     <span class="toggle-slider"></span>
                 </label>
             </preview-info>
-
-            <img class="image-preview" src=".././res/previews/deviceCare/storage_preview.png">
-            <preview-info>
-                <span class="info">Storage</span>
-                <label class="oui-label oui-container-toggle" for="deviceCare-checkbox">
-                    <input id="deviceCare-checkbox" type="checkbox" class="toggle">
-                    <span class="toggle-slider"></span>
-                </label>
-            </preview-info>
         </bubble-preview>
 
     </container>
@@ -116,38 +107,6 @@
                 </preview-right>
 
             </preview-info>
-
-            <img class="image-preview" src=".././res/previews/weather/forecast_preview.png">
-            <preview-info>
-                <span class="info">Forecast</span>
-
-                <preview-right>
-                    <img class="settings" src=".././res/ic_oui_settings_outline.svg"
-                        onclick="openSubMenu('galaxy-widgets/weather')">
-
-                    <label class="oui-label oui-container-toggle" for="forecast-checkbox">
-                        <input id="forecast-checkbox" type="checkbox" class="toggle">
-                        <span class="toggle-slider"></span>
-                    </label>
-                </preview-right>
-
-            </preview-info>
-
-            <img class="image-preview" src=".././res/previews/weather/hoursForecast_preview.png">
-            <preview-info>
-                <span class="info">Hours Forecast</span>
-
-                <preview-right>
-                    <img class="settings" src=".././res/ic_oui_settings_outline.svg"
-                        onclick="openSubMenu('galaxy-widgets/weather')">
-
-                    <label class="oui-label oui-container-toggle" for="hoursForecast-checkbox">
-                        <input id="hoursForecast-checkbox" type="checkbox" class="toggle">
-                        <span class="toggle-slider"></span>
-                    </label>
-                </preview-right>
-
-            </preview-info>
         </bubble-preview>
 
     </container>
@@ -164,7 +123,6 @@
             <div class="bubble-right">
                 <img class="preview-button" onclick="togglePreview('news-container')"
                     src=".././res/ic_oui_keyboard_arrow_down.svg"></img>
-
             </div>
         </container>
 
@@ -183,7 +141,7 @@
 
     </container>
 
-    <seperatorhorizontal></seperatorhorizontal>
+    <!-- <seperatorhorizontal></seperatorhorizontal>
 
     <container class="bubble-info" id="wallet-container">
         <container class="bubble-top">
@@ -220,7 +178,7 @@
 
         </bubble-preview>
 
-    </container>
+    </container> -->
 
     <seperatorhorizontal></seperatorhorizontal>
 
@@ -253,7 +211,7 @@
 
     </container>
 
-    <seperatorhorizontal></seperatorhorizontal>
+    <!-- <seperatorhorizontal></seperatorhorizontal>
 
     <container class="bubble-info" id="notes-container">
         <container class="bubble-top">
@@ -344,9 +302,6 @@
             </preview-info>
         </bubble-preview>
 
-    </container>
+    </container> -->
 
-    <br>
 </bubble>
-
-<br>
