--- a/app/settings/galaxy-widgets/colors/main.html
+++ b/app/settings/galaxy-widgets/colors/main.html
@@ -6,7 +6,7 @@
 
 <bubble>
     <container id="container-colors">
-        <div class="color" id="black" onclick="setColor([28,28,28], [250,250,250], [120,120,120], [170,167,195])"></div>
+        <div class="color" id="black" onclick="setColor([28,28,28], [250,250,250], [120,120,120], [46, 103, 254])"></div>
         <div class="color" id="teal" onclick="setColor([34,190,170], [0,0,0], [170,170,170], [61, 148, 96])"></div>
         <div class="color" id="blue" onclick="setColor([123,175,232], [250,250,250], [120,120,120], [75, 102, 160])"></div>
         <div class="color" id="green" onclick="setColor([206,208,171], [0,0,0], [120,120,120], [160, 130, 84])"></div>
